Add Authentication and managed Connection

--- a/RR_LibrarymanagementSystem/Views/User/Login.cshtml
+++ b/RR_LibrarymanagementSystem/Views/User/Login.cshtml
@@ -26,9 +26,7 @@
                             <div class="d-block">
                                 <label for="password" class="control-label">Password</label>
                                 <div class="float-right">
-                                    <a href="auth-forgot-password.html" class="text-small">
-                                        Forgot Password?
-                                    </a>
+                                    <a asp-controller="User" asp-action="Signup">Signup</a>
                                 </div>
                             </div>
                             <input id="password" asp-for="Password" type="password" class="form-control" name="password" tabindex="2" required>
@@ -44,6 +42,7 @@
                                 Login
                             </button>
                         </div>
+                       
                     </form>
 
 
