--- a/RR_LibrarymanagementSystem/Views/Shared/ClientLayout/_Footer.cshtml
+++ b/RR_LibrarymanagementSystem/Views/Shared/ClientLayout/_Footer.cshtml
@@ -5,9 +5,9 @@
         <div class="row gy-4">
             <div class="col-lg-5 col-md-12 footer-info">
                 <a href="index.html" class="logo d-flex align-items-center">
-                    <span>Car rental</span>
+                    <span>Rumrail Library Management</span>
                 </a>
-                <p>Hami jasto dami gadi kasaile bechdaina</p>
+                <p>Hami jasto dami management kasaile bechdaina</p>
                 <div class="social-links d-flex mt-4">
                     <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                     <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -43,7 +43,7 @@
                     Balaju, Height<br>
                     Nepal,Kathmandu  <br><br>
                     <strong>Phone:</strong> +977 9849539566<br>
-                    <strong>Email:</strong> hajurkocar@gmail.com<br>
+                    <strong>Email:</strong> Library@gmail.com<br>
                 </p>
 
             </div>
@@ -53,7 +53,7 @@
 
     <div class="container mt-4">
         <div class="copyright">
-            &copy; Copyright <strong><span>Hajur ko car rental</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Rumrail library Management System</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
             <!-- All the links in the footer should remain intact. -->
