--- a/RR_LibrarymanagementSystem/Views/Shared/ClientLayout/_Header.cshtml
+++ b/RR_LibrarymanagementSystem/Views/Shared/ClientLayout/_Header.cshtml
@@ -12,15 +12,15 @@
         <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a asp-controller="Client" asp-action="index">Home</a></li>
-                <li><a asp-controller="Client" asp-action="about">About</a></li>
-                <li><a asp-controller="Client" asp-action="cars">Books</a></li>
-                <li><a asp-controller="Client" asp-action="contact">Contact</a></li>
+                <li><a asp-controller="User" asp-action="index">Home</a></li>
+                <li><a asp-controller="User" asp-action="about">About</a></li>
+                <li><a asp-controller="User" asp-action="books">Books</a></li>
+                <li><a asp-controller="User" asp-action="contact">Contact</a></li>
 
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li><a asp-controller="Client" asp-action="Dashboard" class="get-a-quote bg-warning text-dark">Dashboard</a></li>
-                    <a class="get-a-quote" asp-controller="Client" asp-action="Logout">
+                    <a class="get-a-quote" asp-controller="User" asp-action="Logout">
                         @*<li><button class="get-a-quote" type="submit">@User.FindFirst("Role").Value | Logout</button></li>*@
                         @User.Identity.Name | Logout
                     </a>
