--- a/RR_LibrarymanagementSystem/Views/Shared/Adminlayout/_Sidebar.cshtml
+++ b/RR_LibrarymanagementSystem/Views/Shared/Adminlayout/_Sidebar.cshtml
@@ -13,9 +13,9 @@
 
             </li>
             <li class="menu-header">Reports</li>
-            @*<li class="active">
+            <li class="active">
                 <a asp-controller="Admin" asp-action="Booking" class="nav-link "><i class="fas bi bi-car-front-fill"></i><span>Booking</span></a>
-            </li>*@
+            </li>
             <li class="active">
                 <a asp-controller="Admin" asp-action="Report" class="nav-link "><i class="fas bi bi-bar-chart"></i><span>Report</span></a>
             </li>
