--- a/RR_LibrarymanagementSystem/Views/Admin/AddBook.cshtml
+++ b/RR_LibrarymanagementSystem/Views/Admin/AddBook.cshtml
@@ -1,4 +1,4 @@
-@model RR_LibraryManagementSystem.DataAccess.Domain.BookDetails;
+@model RR_LibraryManagementSystem.DataAccess.Domain.BookDetails_VM;
 @{
     Layout = "AdminLayout/_AdminLayout";
 }
@@ -34,7 +34,10 @@
                                 <label>Stock Number</label>
                                 <input type="number" maxlength="5" asp-for="Stock" class="form-control" required>
                             </div>
-                        
+                            <div class="form-group">
+                                <label>Upload Image</label>
+                                <input asp-for="UploadImage" class="form-control" required>
+                            </div>
 
                             <div class="card-footer">
                                 <a asp-controller="Admin" asp-action="BookIndex" class="btn btn-primary text-white">Back to List</a>
