--- a/RR_LibrarymanagementSystem/Views/User/Books.cshtml
+++ b/RR_LibrarymanagementSystem/Views/User/Books.cshtml
@@ -39,7 +39,6 @@
     <!-- ======= Services Section ======= -->
     <section id="service" class="services pt-0">
         <div class="container" data-aos="fade-up">
-
             <div class="section-header">
                 <span>Our Services</span>
                 <h2>Our Services</h2>
@@ -51,7 +50,7 @@
                 {
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img height="240" src="https://www.starprintbrokers.com/wp-content/uploads/2021/11/book-design-cover-isolated-874x1024.png" />
+                            <img height="240" src="@item.UploadImage" />
                             <div class="card-body">
                                 <div class="text-center">
                                     <h2 class="text-primary">@item.BookName</h2>
